EPMRPP-44770 Dashboard page. Text align fixes

--- a/app/src/pages/inside/filtersPage/filterGrid/filterGrid.scss
+++ b/app/src/pages/inside/filtersPage/filterGrid/filterGrid.scss
@@ -16,8 +16,6 @@
 
 .name-col {
   width: 30%;
-  padding: 15px;
-  box-sizing: border-box;
 
   &:hover {
     .pencil-icon {
